spark integration