@@ -8,7 +8,7 @@ lazy val root = (project in file("."))
   .enablePlugins(JavaAppPackaging)
   .settings(
     name := "AlmaChess",
-    coverageExcludedPackages := "de\\.htwg\\.softwarearchitecture\\.almachess\\.Main\\$?;de\\.htwg\\.softwarearchitecture\\.almachess\\.CliMain\\$?;de\\.htwg\\.softwarearchitecture\\.almachess\\.api\\.Server\\$?;de\\.htwg\\.softwarearchitecture\\.almachess\\.view\\..*",
+    coverageExcludedPackages := "de\\.htwg\\.softwarearchitecture\\.almachess\\.Main\\$?;de\\.htwg\\.softwarearchitecture\\.almachess\\.CliMain\\$?;de\\.htwg\\.softwarearchitecture\\.almachess\\.api\\.Server\\$?;de\\.htwg\\.softwarearchitecture\\.almachess\\.view\\..*;de\\.htwg\\.softwarearchitecture\\.almachess\\.tools\\..*",
     Compile / mainClass := Some("de.htwg.softwarearchitecture.almachess.api.Server"),
     libraryDependencies ++= Seq(
       "org.scala-lang.modules" %% "scala-swing" % "3.0.0",
@@ -47,6 +47,54 @@ lazy val bench = (project in file("bench"))
     scalaVersion := "3.3.4",
     publish / skip := true,
     Jmh / fork := true
+  )
+
+// Spark analytics over the `almachess.moves` Kafka topic (and its JSONL file
+// dump). Separate Scala 2.13 subproject because Spark publishes no Scala 3
+// artifacts — same pattern as the Gatling subproject below. Deliberately does
+// NOT dependOn(root): analytics is coupled to the rest of the system only via
+// the event format on the topic.
+//
+// Spark 3.5 supports Java 8/11/17. On newer JDKs set ANALYTICS_JAVA_HOME to a
+// JDK 17 installation; the forked run picks it up.
+lazy val analytics = (project in file("analytics/spark"))
+  .settings(
+    name := "almachess-analytics",
+    scalaVersion := "2.13.14",
+    publish / skip := true,
+    libraryDependencies ++= Seq(
+      "org.apache.spark" %% "spark-sql"            % "3.5.6",
+      "org.apache.spark" %% "spark-sql-kafka-0-10" % "3.5.6"
+    ),
+    Compile / run / fork := true,
+    Compile / run / javaHome := sys.env.get("ANALYTICS_JAVA_HOME").map(file),
+    // Fork from the repo root so the default `analytics/data/moves.jsonl`
+    // path resolves regardless of the subproject's base directory.
+    Compile / run / forkOptions := (Compile / run / forkOptions).value
+      .withWorkingDirectory((ThisBuild / baseDirectory).value),
+    // Spark needs reflective access to JDK internals on Java 17.
+    Compile / run / javaOptions ++= Seq(
+      "-Xmx1g",
+      "--add-opens=java.base/java.lang=ALL-UNNAMED",
+      "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+      "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+      "--add-opens=java.base/java.io=ALL-UNNAMED",
+      "--add-opens=java.base/java.net=ALL-UNNAMED",
+      "--add-opens=java.base/java.nio=ALL-UNNAMED",
+      "--add-opens=java.base/java.util=ALL-UNNAMED",
+      "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+      "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+      "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+      "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
+      "--add-opens=java.base/sun.security.action=ALL-UNNAMED",
+      "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED"
+    ),
+    // Windows: streaming checkpoints need Hadoop's winutils.exe + hadoop.dll.
+    // hadoop.dll is loaded via java.library.path, which does not include
+    // %HADOOP_HOME%\bin by default — point it there when HADOOP_HOME is set.
+    Compile / run / javaOptions ++=
+      sys.env.get("HADOOP_HOME").map(h => s"-Djava.library.path=$h${java.io.File.separator}bin").toSeq,
+    evictionErrorLevel := Level.Warn
   )
 
 // Gatling load tests. Separate subproject so its Scala 2.13 / akka transitive deps
